# snake

./: .clang-format  CMakeLists.txt
animation/: CMakeLists.txt
animation/include/: AnimationManager.hpp  CAnimation.hpp  CAnimationManager.hpp  DoActionAnimation.hpp  GroupAnimation.hpp  IAnimation.hpp  IAnimationManager.hpp  LoopAnimation.hpp  ScopedAnimationId.hpp  SequenceAnimation.hpp  TypeUtilities.hpp  ValueSettingAnimation.hpp  WaitAnimation.hpp
animation/src/: CAnimationManager.cpp  ScopedAnimationId.cpp
include/: Common.hpp  Food.hpp  Snake.hpp
src/: Food.cpp  Snake.cpp  main.cpp
